clean(repo): Deleted *.exe files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-windows/update-testing
-windows/pinguino-libraries.zip
-windows/pinguino-windows64-gcc-mips-elf.zip
-windows/pinguino-ide.zip
+windows/Pinguino*.exe
